// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests Draw commands 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M353.923,220 L250,280 L250,250 L301.9615,220 L301.9615,130 L353.923,100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923,100 L250,40 L198.0385,70 L301.9615,130z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385,130 L250,160 L198.0385,190 L146.077,160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250,160 L301.9615,220 L250,250 L198.0385,190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M198.0385,70 L198.0385,130 L250,160 L301.9615,220 L301.9615,130z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M146.077,160 L198.0385,190 L250,250 L250,280 L146.077,220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw methods 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250,40 L353.923,100 L250,160 L146.077,100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923,100 L353.923,220 L250,280 L250,160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250,160 L250,280 L146.077,220 L146.077,100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;

exports[`Snapshot tests Draw methods aliases 1`] = `
<div>
  <svg
    height="320px"
    viewBox="0 0 500 320"
    width="500px"
  >
    <rect
      fill="#CCC"
      height="320px"
      width="500px"
      x="0"
      y="0"
    />
    <path
      d="M250,100 L353.923,160 L250,220 L146.077,160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M353.923,160 L353.923,220 L250,280 L250,220z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250,220 L250,280 L146.077,220 L146.077,160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250,40 L301.9615,70 L250,130 L198.0385,100z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M301.9615,70 L250,130 L250,190 L301.9615,160z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
    <path
      d="M250,130 L198.0385,100 L198.0385,160 L250,190z"
      fill="white"
      fill-opacity="1"
      stroke="black"
      stroke-dasharray=""
      stroke-linecap="butt"
      stroke-linejoin="round"
      stroke-opacity="1"
      stroke-width="1"
    />
  </svg>
</div>
`;
